# Hive

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml  todo.md  技术文档.md
backend/: config.py  main.py
backend/api/: auth.py  routes.py  ws.py
backend/core/: agent.py  context.py  event_bus.py  foreman.py  group.py  router.py  task.py
backend/db/: database.py  models.py
backend/mcp/: __main__.py  server.py
backend/models/: base.py  claude.py  cli.py  openai_adapter.py  registry.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfirmDialog.tsx  FolderPicker.tsx
frontend/src/components/AgentPanel/: AddAgentDialog.tsx  AgentCard.tsx  AgentPanel.tsx  EditAgentDialog.tsx
frontend/src/components/Chat/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx
frontend/src/components/TaskTree/: TaskTree.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: CreateSpacePage.tsx  HomePage.tsx  LoginPage.tsx  WorkspacePage.tsx
frontend/src/store/: agentStore.ts  authStore.ts  groupStore.ts  messageStore.ts
frontend/src/types/: index.ts
